--- a/task2.css
+++ b/task2.css
@@ -1,99 +1,59 @@
 body {
-  font: Arial;
-  color: #FFFFFF;
-  background: #2E335F;
+    margin: 0px;
+    padding: 0px;
+    background-color: aliceblue;
 }
 
-
-.container {
-  margin: 100px auto;
-  width: 640px;
-
+.main {
+    position: absolute;
+    margin: 20px 0 0 20px;
 }
 
-.container .cal {
-  margin: 0 auto;
+span {
+    padding: 5px;
+    border-radius: 2px;
 }
 
-
-.cal {
-  display: block;
-  width: 245px;
-  background:#D6D1D1;
- border-style: hidden;
- padding: 15px;
- background-color: #D6D1D1;
+input[type="checkbox"] {
+    display: none;
 }
 
-.cal a {
-  text-decoration: none;
+.green, label .green {
+    color: green;
+    padding: 20px;
 }
 
-.cal caption {
-  display: block;
-  line-height: 32px;
-  font-weight: bold;
-  color: #FFFFFF;
-  text-align: center;
-  background: #FB9292;
+.red, label .red {
+    color: red;
+    padding: 20px;
 }
 
-.cal caption a {
-  display: block;
-  line-height: 32px;
-  padding: 0 10px;
-  font-size: 15px;
-  color: #777373;
+.blue, label .blue {
+    color: blue;
+    padding: 20px;
 }
 
-.cal caption .prev {
-  float: left;
+.show_green, .show_blue, .show_red{
+    display: none;
 }
 
-.cal caption .next {
-  float: right;
+.green:checked ~ .show_green {
+    display: inline;
+    background: green;
+    color: white;
+    padding: 10px;
+ }
+
+.red:checked ~ .show_red {
+    display: inline;
+    background: red;
+    color: white;
+    padding: 10px;
 }
 
-.cal th, .cal td {
-  width: 40px;
-  text-align: center;
-  text-shadow: 0 1px rgba(255, 255, 255, 0.8);
-}
-
-.cal th:first-child, .cal td:first-child {
-  border-left: 0;
-}
-
-.cal th {
-  line-height: 25px;
-  font-size: 10px;
-  color: #696969;
-  text-transform: uppercase;
-  background: #ECE5E5;
-}
-
-.cal td {
-  font-size: 9px;
-  font-weight: bold;
-  border-top: 1px solid #c2c2c2;
-  border-left: 1px solid #c2c2c2;
-  background: #ECE5E5;
-}
-
-.cal td a {
-  clear: both;
-  display: block;
-  position: relative;
-  width: 30px;
-  line-height: 28px;
-  color: #666;
-}
-.cal td.off a {
-  color: #b3b3b3;
-}
-.cal td.active a, .cal td a:active {
-  margin: -1px;
-  color: #f3f3f3;
-  background: #FB9292;
-  border: 1px solid #598b94;
+.blue:checked ~ .show_blue {
+    display: inline;
+    background: blue;
+    color: white;
+    padding: 10px;
 }
